# govuk-prototype-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile_dev  Makefile.toml  Readme.md  Rocket.toml  a_rusty_diesel_powered_rocket.md  docker-compose.yml  esbuild.js  package-lock.json  package.json
.github/workflows/: test.yml
assets/scripts/: application.js
assets/styles/: application.scss
migrations/2022-10-26-224342_create_users/: up.sql
src/: config.rs  lib.rs  main.rs  routes.rs  schema.rs  tests.rs
src/data/: users.rs
src/jobs/: mailer.rs  mod.rs
src/models/: user.rs
src/notify/: mod.rs
templates/: 404.html.tera  index.html.tera  layout.html.tera  start_page.html.tera  users.html.tera
templates/partials/: footer.html.tera  header.html.tera
templates/users/: edit.html.tera  index.html.tera  new.html.tera  show.html.tera
tests/: common.rs  errors.rs  main.rs  tests.rs  users.rs
tests/common/: mod.rs
