[package]
name = "govuk-prototype-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json"] }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tera"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["diesel_postgres_pool"] }
diesel = { version = "2.0", features = ["postgres"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
serde = "1.0"
lazy_static = "1.4"

[dev-dependencies]
once_cell = "1.16"
serde_json = "1.0.87"
temp-env = "0.3"
