[package]
name = "govuk-prototype-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8.1"
chrono = "0.4"
govuk_notify = "0.1"

[dev-dependencies]
once_cell = "1.16"
temp-env = "0.3"
